--- a/game_test/about.html
+++ b/game_test/about.html
@@ -2,18 +2,14 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Game | About</title>
+		<title id="title" pageName="About">Game | About</title>
 		<link rel="stylesheet" type="text/css" href="css/index.css">
+		<script type="text/javascript" charset="utf-8" src="js/jquery.min.js"></script>
+		<script> 
+		    $(function(){ $("#includedContent").load("navBar.html"); });
+	    </script> 
 	</head>
 	<body>
-		<div id="aboutHeader" class="header">
-			<h1>About</h1>
-			<div id="nav" class="about buttons">
-				<a href="index.html"><div class="btn">Home</div></a>
-				<a href="game_screen.html"><div class="btn" onclick="showLevelScreen();">Play</div></a>
-				<a href="highscores.php"><div class="btn">High Scores</div></a>
-				<a href="about.html"><div class="btn">About</div></a>
-			</div>
-		</div>
+		<div id="includedContent"></div>
 	</body>
 </html>
