Removed the screen shot directory

--- a/game_test/navBar.html
+++ b/game_test/navBar.html
@@ -1,8 +1,8 @@
 <div id="aboutHeader" class="header">
 	<h1 id="header"></h1>
 	<script type="text/javascript">
-		var x = document.getElementById("title").getAttribute("pageName");
-		document.getElementById("header").innerHTML = x;
+		var pageName = document.getElementById("title").getAttribute("pageName");
+		document.getElementById("header").innerHTML = pageName;
 	</script>
 	<div id="nav" class="about buttons">
 		<a href="index.html"><div class="btn">Home</div></a>
