--- a/game_test/navBar.html
+++ b/game_test/navBar.html
@@ -9,5 +9,6 @@
 		<a href="game_screen.html"><div class="btn" onclick="showLevelScreen();">Play</div></a>
 		<a href="highscores.php"><div class="btn">High Scores</div></a>
 		<a href="about.html"><div class="btn">About</div></a>
+		<a href="login.html"><div class="btn">Login</div></a>
 	</div>
 </div>
