--- a/game_test/index.html
+++ b/game_test/index.html
@@ -11,5 +11,36 @@
 	</head>
 	<body>
 		<div id="includedContent"></div>
+		<div>
+			<form action="create_user.php">
+				<fieldset>
+					<legend>Create User</legend>
+					First Name: 
+					<input type="text" name="firstname" id="firstname"><br>
+					Last Name: 
+					<input type="text" name="lastname" id="lastname"><br>
+					Gamer Tag:
+					<input type="text" name="newgametag" id="newgametag"><br>
+					Email:
+					<input type="email" name="email" id="email"><br>
+					Password:
+					<input type="password" name="newpassword" id="newpassword"><br>
+					Re-Enter Password:
+					<input type="password" name="newrepassword" id="repassword"><br>
+					<input type="submit" value="Submit"><br>
+				</fieldset>
+			</form>
+		</div>
+		<div>
+			<form action="login_user.php">
+				<fieldset>
+					<legend>Log In</legend>
+					Gamer Tag: <input type="text" name="gamertag" id="gamertag"><br>
+					Password: <input type="password" name="password" id="password"><br>
+					<input type="submit" value="Submit"><br>
+
+				</fieldset>
+			</form>
+		</div>
 	</body>
 </html>
