Updated navbar, added temp logo to home page, resized canvas, and removed ds_store

--- a/game_test/game_screen.html
+++ b/game_test/game_screen.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 		<title id="title" pageName="Play">Game | Play</title>
 		<link rel="stylesheet" type="text/css" href="css/index.css">
+		<link rel="stylesheet" type="text/css" href="css/nav-bar.css">
 		<script type="text/javascript" charset="utf-8" src="js/jquery.min.js"></script>
 		<script> 
 		    $(function(){ $("#includedContent").load("navBar.html"); });
@@ -14,7 +15,10 @@
 	<p style="text-align: center;">
 		Hit Spacebar to start/stop animation.
 	</p>
-    <canvas id="canvas" width="800" height="500" style="border:1px solid #000000;">
+	<p style="text-align: center;">
+		Use arrows keys or w, s, a, d to move character
+	</p>
+    <canvas id="canvas" width="900" height="300" style="border:1px solid #000000;">
     	Canvas unsupported on current browser.
     </canvas>
 	
