--- a/game_test/users.html
+++ b/game_test/users.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 		<title id="title" pageName="Users">Game | Users</title>
 		<link rel="stylesheet" type="text/css" href="css/index.css">
+		<link rel="stylesheet" type="text/css" href="css/nav-bar.css">
 		<script type="text/javascript" charset="utf-8" src="js/jquery.min.js"></script>
 		<script> 
 		    $(function(){ $("#includedContent").load("navBar.html"); });
