--- a/game_test/navBar.html
+++ b/game_test/navBar.html
@@ -8,7 +8,8 @@
 			<a id="orange-link" class="nav-link navlink" href="game_screen.html">Play</a>
 			<a id="blue-link" class="nav-link navlink" href="highscores.php">High Scores</a>
 			<a id="green-link" class="nav-link navlink" href="users.html">Users</a>
-			<a class="circular icon navlink" href=""><img src="icons/face.png" alt=""></a>
+			<!-- <a class="circular icon navlink dropdown" href=""><img src="icons/face.png" alt=""></a> -->
+			<a id="purple-link" class="nav-link navlink" href="index.html">Sign Out</a>
 		</nav>
 	</div>
 </div>
