--- a/game_test/friends.html
+++ b/game_test/friends.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title id="title" pageName="Users">Game | Users</title>
+		<title id="title" pageName="Users">Game | Friends</title>
 		<link rel="stylesheet" type="text/css" href="css/index.css">
 		<link rel="stylesheet" type="text/css" href="css/nav-bar.css">
 		<script type="text/javascript" charset="utf-8" src="js/jquery.min.js"></script>
