--- a/game_test/navBar.html
+++ b/game_test/navBar.html
@@ -4,10 +4,10 @@
 			<img class="logo" src="images/logo.png" width="150">
 		</a>
 		<nav class="nav-menu navmenu" role="navigation">
-			<a id="red-link" class="nav-link navlink" href="index.html">Home</a>
+			<a id="red-link" class="nav-link navlink" href="home.php">Home</a>
 			<a id="orange-link" class="nav-link navlink" href="game_screen.html">Play</a>
 			<a id="blue-link" class="nav-link navlink" href="highscores.php">High Scores</a>
-			<a id="green-link" class="nav-link navlink" href="users.html">Users</a>
+			<a id="green-link" class="nav-link navlink" href="friends.html">Friends</a>
 			<!-- <a class="circular icon navlink dropdown" href=""><img src="icons/face.png" alt=""></a> -->
 			<a id="purple-link" class="nav-link navlink" href="index.html">Sign Out</a>
 		</nav>
