Revert "Renamed files"
This reverts commit a05d4e870057970473fc7560c8d06dd84e3f74dd.

--- a/game_test/users.html
+++ b/game_test/users.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title id="title" pageName="Users">Game | Home</title>
+		<title id="title" pageName="Users">Game | Users</title>
 		<link rel="stylesheet" type="text/css" href="css/index.css">
 		<link rel="stylesheet" type="text/css" href="css/nav-bar.css">
 		<script type="text/javascript" charset="utf-8" src="js/jquery.min.js"></script>
