Create User Account
When a user creates a new account the database is updated. Note that we
need error handling for duplicate entries…

--- a/game_test/index.html
+++ b/game_test/index.html
@@ -30,7 +30,7 @@
 					</form>
 				</div>
 				<div id = "reg" class = "tab-pane">
-					<form action="home.php" onsubmit = "return validate(this);">
+					<form action="db_insert_new_user.php" onsubmit = "return validate(this);">
 							<fieldset>
 								<legend >Create User</legend>
 								<input type="text" name="firstname" id="firstname" placeholder="First" required>
@@ -38,7 +38,7 @@
 								<input type="text" name="newgametag" id="newgametag" placeholder="Gamer Tag" required>
 								<input type="email" name="email" id="email" placeholder="Email" required>
 								<input type="password" name="newpassword" id="newpassword" placeholder="Password" required>
-								<input type="submit" value="Submit" required>
+								<input type="submit" value="Submit" >
 							</fieldset>
 					</form>
 				</div>
