Fixed ajax call and table now outputs correct data

--- a/game_test/highscores.html
+++ b/game_test/highscores.html
@@ -6,30 +6,32 @@
 		<link rel="stylesheet" type="text/css" href="css/index.css">
 		<link rel="stylesheet" type="text/css" href="css/nav-bar.css">
 		<script type="text/javascript" charset="utf-8" src="js/jquery.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 		<script> 
 				$(init);
 		 		function init()
 		    	{
 		    	  $("#includedContent").load("navBar.html"); 
 		    	  $("#highscore_table").load("db_highscores.php");
-		    	  //$("#search").submit(s);
+		    	  $("#search").submit(s);
 		    	}
 		    	
-		    	// function s(event, ui)
-		    	// {
-		    	// 	gamertag = $("#gamertag").val();
-		    	// 	window.alert(gamertag);
-		    	// 	$("highscore_table").load("db_highscores.php", {"gamertag": gamertag});
-		    	// }
+		    	 function s(event, ui)
+		    	 {
+		    	 	event.preventDefault();
+		    	 	gamertag = $("#gamertag").val();
+		    	 	//window.alert(gamertag);
+		    	 	$("#highscore_table").load("db_highscores.php", {"gamertag": gamertag});
+		    	 }
 	    </script> 
 	</head>
 	<body>
 		<div id="includedContent"></div>
-		<form method="GET" id = "search">
+		<form method="POST" id="search">
 		<fieldset>
 			<legend>Search by Gamer Tag</legend>
 				<input type="text" name="gamertag" id="gamertag" placeholder="Gamer Tag"/>
-			<input type="submit" value="Submit" />
+			<input type="Submit" value="Submit">
 		</fieldset>
 		</form>
 		<div id = "highscore_table"></div>
