Added new logo and removed unused assests. New sprites have been added as well

--- a/game_test/index.html
+++ b/game_test/index.html
@@ -12,7 +12,7 @@
 	</head>
 	<body>
 		<div class="header">
-			<img src="images/logo.png" width="600" height="250" />
+			<img src="images/LoneSurvivor.png" width="800" height="100" />
 		</div>
 		<div class = "container">
 			<ul class= "nav nav-tabs box">
