--- a/game_test/navBar.html
+++ b/game_test/navBar.html
@@ -1,7 +1,7 @@
 <div class="navbar navbar-fixed-top">
 	<div class="container nav-container">
 		<a class="nav-brand" href="">
-			<img class="logo" src="images/logo.png" width="150">
+			<img class="logo" src="images/LoneSurvivor.png" width="200">
 		</a>
 		<nav class="nav-menu navmenu" role="navigation">
 			<a id="red-link" class="nav-link navlink" href="home.php">Home</a>
