Added Login authentication
commented out the the beginning welcome popup

--- a/game_test/index.html
+++ b/game_test/index.html
@@ -1,4 +1,4 @@
-	<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
@@ -9,6 +9,7 @@
   		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   		<link rel="stylesheet" type="text/css" href="jquery-ui-1.11.4.custom/jquery-ui.css">
 		<script type="text/javascript" charset="utf-8" src="js/jquery.min.js"></script>
+		<script type="text/javascript" src="comm.js"></script>
 	</head>
 	<body>
 		<div class="header">
@@ -21,7 +22,7 @@
 			</ul>
 			<div class = "tab-content box">
 				<div id = "login" class = "tab-pane active">
-					<form action="home.php">
+					<form id = "login" onsubmit = "return ifValidLogin()">
 							<fieldset>
 							<legend>Log In</legend>
 							<input type="text" name="gamertag" id="gamertag" placeholder="Gamer Tag" pattern="^.{3}$" required> <!-- Add js and php to validate against db -->
@@ -45,9 +46,9 @@
 				</div>
 			</div>
 		</div>
-		<div id="dialog" title="Welcome">
+		<!--<div id="dialog" title="Welcome">
 			<p>Welcome! Thank you for visiting our site. Enjoy being annoyed by this pop up!</p>
-		</div>
+		</div>-->
 		<script src="jquery-ui-1.11.4.custom/external/jquery/jquery.js"></script>
 		<script src="jquery-ui-1.11.4.custom/jquery-ui.js"></script>
 		<script>
@@ -91,6 +92,26 @@
 			}
 		</script>
 		<script>
+			function ifValidLogin(){
+				gamertag = $("#gamertag").val();
+				password = $("#password").val();
+				ajax.post('db_login.php', {'gamertag': gamertag, 'password': password}, 
+					function(response){
+						if (response == 'true')
+						{
+							location.href = 'home.php';
+						}
+						else 
+						{
+							alert('Wrong username/password');
+							$("#gamertag").val("");
+							$("#password").val("");
+						}
+				}, true);
+				return false;
+			}
+		</script>
+		<!--<script>
 			$( "#dialog" ).dialog({
 				autoOpen: true,
 				width: 400,
@@ -115,6 +136,6 @@
 				$( "#dialog" ).dialog( "open" );
 				event.preventDefault();
 			});
-		</script>
+		</script>--> 	
 	</body>
 </html>
