--- a/game_test/navBar.html
+++ b/game_test/navBar.html
@@ -5,11 +5,11 @@
 		</a>
 		<nav class="nav-menu navmenu" role="navigation">
 			<a id="red-link" class="nav-link navlink" href="home.php">Home</a>
-			<a id="orange-link" class="nav-link navlink" href="game_screen.html">Play</a>
-			<a id="blue-link" class="nav-link navlink" href="highscores.html">High Scores</a>
+			<a id="orange-link" class="nav-link navlink" href="game_screen.php">Play</a>
+			<a id="blue-link" class="nav-link navlink" href="highscores.php">High Scores</a>
 			<a id="green-link" class="nav-link navlink" href="friends.html">Friends</a>
 			<!-- <a class="circular icon navlink dropdown" href=""><img src="icons/face.png" alt=""></a> -->
-			<a id="purple-link" class="nav-link navlink" href="index.html">Sign Out</a>
+			<a id="purple-link" class="nav-link navlink" href="signout.php">Sign Out</a>
 		</nav>
 	</div>
 </div>
