--- a/game_test/index.html
+++ b/game_test/index.html
@@ -7,7 +7,6 @@
 		<link rel="stylesheet" type="text/css" href="css/index.css">
   		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-  		<link rel="stylesheet" type="text/css" href="jquery-ui-1.11.4.custom/jquery-ui.css">
 		<script type="text/javascript" charset="utf-8" src="js/jquery.min.js"></script>
 		<script type="text/javascript" src="comm.js"></script>
 	</head>
@@ -15,7 +14,7 @@
 		<div class="header">
 			<img src="images/LoneSurvivor.png" width="800" height="100" />
 		</div>
-		<div class = "container">
+		<div class = "container bottom">
 			<ul class= "nav nav-tabs box">
 				<li class="active"> <a data-toggle="tab" href="#login"> Log In </a> </li>
 				<li> <a data-toggle="tab" href = "#reg"> Register </a></li>
@@ -158,5 +157,19 @@
 				event.preventDefault();
 			});
 		</script>--> 	
+		<div id="footer" class="container-fluid">
+	        <div>
+	            <div class="row">
+	                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3"><a href="#">FAQ</a></div>
+	                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3"><a href="#">About</a></div>
+	                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3"><a href="#">Terms &amp; Privacy</a></div>
+	                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3"><a href="#">Contact</a></div>
+	            </div>
+	            <br>
+	            <div class="row">
+	                Lone Survivor &copy; 2015 All Rights Reserved
+	            </div>
+	        </div>
+   		</div>
 	</body>
 </html>
