--- a/game_test/index.html
+++ b/game_test/index.html
@@ -45,9 +45,20 @@
 				</div>
 			</div>
 		</div>
-		<!--<div id="dialog" title="Welcome">
-			<p>Welcome! Thank you for visiting our site. Enjoy being annoyed by this pop up!</p>
-		</div>-->
+		<div id="footer" class="container-fluid">
+	        <div>
+	            <div class="row">
+	                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3"><a href="#">FAQ</a></div>
+	                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3"><a href="#">About</a></div>
+	                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3"><a href="#">Terms &amp; Privacy</a></div>
+	                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3"><a href="#">Contact</a></div>
+	            </div>
+	            <br>
+	            <div class="row">
+	                Lone Survivor &copy; 2015 All Rights Reserved
+	            </div>
+	        </div>
+   		</div>
 		<script src="jquery-ui-1.11.4.custom/external/jquery/jquery.js"></script>
 		<script src="jquery-ui-1.11.4.custom/jquery-ui.js"></script>
 		<script>
