Branch for presentation

--- a/game_test/index.html
+++ b/game_test/index.html
@@ -128,7 +128,7 @@
 					function(response){
 						if (response == 'true')
 						{
-							location.href = 'home.php';
+							location.href = 'home.php?user=' + "bob";
 						}
 						else 
 						{
